--- a/League./league-1.html
+++ b/League./league-1.html
@@ -34,7 +34,7 @@
     </div>
   </main>
 
-  <script src="/Test.HTML-/League./League.js"></script>
+  <script src="/Test.HTML-/League.js"></script>
 </body>
 </html>
 
