--- a/commands.html
+++ b/commands.html
@@ -16,7 +16,30 @@
   </div>
 
   
-  <style>
+   <style> 
+.content {
+  opacity: 0;
+}
+.fade-in {
+      opacity: 0;
+      animation: fadeIn 1s ease forwards;
+    }
+
+    .fade-out {
+      opacity: 1;
+      animation: fadeOut 1s ease forwards;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; }
+      100% { opacity: 1; }
+    }
+
+    @keyframes fadeOut {
+      0% { opacity: 1; }
+      100% { opacity: 0; }
+    }
+
     body {
       margin: 0;
       background-color: #0e0e0e;
