--- a/socials.html
+++ b/socials.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>My Socials</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-TfQJw4P8L7Cjpm2eP1hdkRaZPK4y6WpdQIgK8VXbDkmkOo9d/7hVbJtMUVsXkeJLbEv3r9fUew+liQUHQz4ulA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-Avb2QiuDEEvB4bZJYdft2mNjVShBftLdPG8FJ0V7irTLQ8Uo0qcPxh4Plq7G5tGm0rU+1SPhVotteLpBERwTkw==" crossorigin="anonymous" referrerpolicy="no-referrer" />" />
 <style>
     :root {
       --dark-bg: #0d0d0d;
@@ -197,7 +197,7 @@
   </header>
 
   <div class="profile">
-    <img src="images/M1hunter09.img" alt="Profile" class="avatar" />
+    <img src="Images/M1hunter09.img" alt="Profile" class="avatar" />
     <h2>M1hunter09</h2>
     <p class="tagline">Gamer ~ Developer ~ OutdoorsMan</p>
   </div>
