--- a/socials.html
+++ b/socials.html
@@ -89,7 +89,7 @@
     }
 
     header {
-      background: src="Images/Banner.img" no-repeat center center;
+      background: url('Images/Banner.img') no-repeat center center;
       background-size: cover;
       height: 250px;
       display: flex;
