--- a/socials.html
+++ b/socials.html
@@ -191,6 +191,11 @@
     <a href="support.html">Support</a>
   </div>
 
+  <header>
+    <h1></h1>
+  </header>
+
+
   <div class="profile">
     <img src="Images/M1hunter09.img" alt="Profile" class="avatar" />
     <h2>M1hunter09</h2>
