--- a/socials.html
+++ b/socials.html
@@ -91,6 +91,8 @@
     header {
       background: url('Images/Banner.img') no-repeat center center;
       background-size: cover;
+      width: 100%;
+      aspect-ratio: 3 / 1;
       height: 250px;
       display: flex;
       align-items: center;
@@ -140,7 +142,7 @@
       color: white;
       font-weight: bold;
       text-align: center;
-      text-decoration: none;
+      text-decoration: none !important;
       transition: transform 0.3s ease, background-color 0.3s;
     }
 
@@ -149,6 +151,7 @@
       font-size: 24px;
       margin-bottom: 8px;
       animation: float 2s infinite ease-in-out;
+      text-decoration: none;
     }
 
     @keyframes float {
