--- a/commands.html
+++ b/commands.html
@@ -11,7 +11,7 @@
     <a href="index.html">Home</a>
     <a href="commands.html" class="active">M1 Bot</a>
     <a href="games.html">Games</a>
-    <a href="updates.html">Socials</a>
+    <a href="socials.html">Socials</a>
     <a href="support.html">Support</a>
   </div>
 
