--- a/games.html
+++ b/games.html
@@ -11,7 +11,7 @@
     <a href="index.html">Home</a>
     <a href="commands.html">M1 Bot</a>
     <a href="games.html" class="active">Games</a>
-    <a href="updates.html">Updates</a>
+    <a href="socials.html">Socials</a>
     <a href="support.html">Support</a>
   </div>
 
