--- a/socials.html
+++ b/socials.html
@@ -93,6 +93,8 @@
       background-size: cover;
       width: 100%;
       aspect-ratio: 1.59 / 1;
+      padding-top: 62.9%;
+      position: relative;
       height: 250px;
       display: flex;
       align-items: center;
@@ -190,7 +192,7 @@
     <a href="index.html">Home</a>
     <a href="commands.html">M1 Bot</a>
     <a href="games.html">Games</a>
-     <a href="updates.html" class="active">Socials</a>
+     <a href="socials.html" class="active">Socials</a>
     <a href="support.html">Support</a>
   </div>
 
