--- a/socials.html
+++ b/socials.html
@@ -12,7 +12,7 @@
       --dark-text: #d0e7ff;
       --dark-accent: #3a9df6;
       --light-bg: #ffffff;
-      --light-text: #5a2970;
+      --light-text: #7200fe;
       --light-accent: #b487d8;
     }
 
@@ -93,7 +93,7 @@
       background-size: cover;
       width: 100%;
       aspect-ratio: 1.59 / 1;
-      padding-top: 62.9%;
+      padding-top: 42.9%;
       height: 250px;
       display: flex;
       align-items: center;
