--- a/socials.html
+++ b/socials.html
@@ -13,7 +13,7 @@
       --dark-accent: #3a9df6;
       --light-bg: #ffffff;
       --light-text: #7200fe;
-      --light-accent: #b487d8;
+      --light-accent: #7200fe;
     }
 
     body {
@@ -93,7 +93,6 @@
       background-size: cover;
       width: 100%;
       aspect-ratio: 1.59 / 1;
-      padding-top: 42.9%;
       height: 250px;
       display: flex;
       align-items: center;
