--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <a href="index.html" class="active">Home</a>
     <a href="commands.html">M1 Bot</a>
     <a href="games.html">Games</a>
+    <a href="Websites.html">Websites</a>
     <a href="socials.html">Socials</a>
     <a href="support.html">Support</a>
   </div>
