--- a/Websites.html
+++ b/Websites.html
@@ -35,7 +35,7 @@
 
     <p>
   <a href="https://m1hunter09.github.io/Test.HTML-/index.html" target="_blank">
-    <img src="Images/M1.img" alt="Logo" class="logo-img" />
+    <img src="Images/Banner.img" alt="Logo" class="logo-img" />
     M1hunter09
   </a>
 </p>
