--- a/Websites.html
+++ b/Websites.html
@@ -19,24 +19,24 @@
   <main class="content">
     <h1 class="gradient-text">Welcome To The Websites Page!</h1>
 
-    <p>
-  <a href="https://m1hunter09.github.io/Test-./" target="_blank">
+<p>
+  <a href="https://m1hunter09.github.io/Test-./" target="_blank" class="logo-link">
     <img src="Images/Reign.img" alt="Logo" class="logo-img" />
-    Reign FC
+    <span class="logo-text">Reign FC</span>
   </a>
 </p>
 
-    <p>
-  <a href="https://m1hunter09.github.io/Elite-Rematch-League/index.html" target="_blank">
+<p>
+  <a href="https://m1hunter09.github.io/Elite-Rematch-League/index.html" target="_blank" class="logo-link">
     <img src="Images/ERL.img" alt="Logo" class="logo-img" />
-    Elite Rematch League
+    <span class="logo-text">Elite Rematch League</span>
   </a>
 </p>
 
-    <p>
-  <a href="https://m1hunter09.github.io/Test.HTML-/index.html" target="_blank">
+<p>
+  <a href="https://m1hunter09.github.io/Test.HTML-/index.html" target="_blank" class="logo-link">
     <img src="Images/Banner.img" alt="Logo" class="logo-img" />
-    M1hunter09
+    <span class="logo-text">M1hunter09</span>
   </a>
 </p>
   </main>
