--- a/socials.html
+++ b/socials.html
@@ -190,7 +190,8 @@
     <a href="index.html">Home</a>
     <a href="commands.html">M1 Bot</a>
     <a href="games.html">Games</a>
-     <a href="socials.html" class="active">Socials</a>
+    <a href="Websites.html">Websites</a>
+    <a href="socials.html" class="active">Socials</a>
     <a href="support.html">Support</a>
   </div>
 
