--- a/support.html
+++ b/support.html
@@ -11,12 +11,15 @@
     <a href="index.html">Home</a>
     <a href="commands.html">M1 Bot</a>
     <a href="games.html">Games</a>
+    <a href="Websites.html">Websites</a>
     <a href="socials.html">Socials</a>
     <a href="support.html" class="active">Support</a>
   </div>
 
   <div class="content">
     <h1 class="gradient-text">Welcome To The Support Page!</h1>
+
+<p>To get support add me on Discord @M1hunter09 | or join one of my servers</p>
 
 </body>
 </html>
