--- a/Websites.html
+++ b/Websites.html
@@ -20,7 +20,7 @@
     <h1 class="gradient-text">Welcome To The Websites Page!</h1>
 
 <p>
-  <a href="https://m1hunter09.github.io/Test-./" target="_blank" class="logo-link">
+  <a href="https://m1hunter09.github.io/Reign-FC/" target="_blank" class="logo-link">
     <img src="Images/Reign.img" alt="Logo" class="logo-img" />
     <span class="logo-text">Reign FC</span>
   </a>
